--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,56 @@
 ---
-title: Welcome to Middleman
+title: MSA
+layout: homepage
 ---
 
-<div class="welcome">
-  <div class="logo">
-    <%= image_tag "middleman-logo.svg" %>
-  </div>
-  <h1>Middleman is Running</h1>
-  <p class="doc">
-    <%= link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<div class="content">
+
+    <h1 class="header">THE MICROSERVICES AGENCY</h1>
+
+    <div class="pure-g">
+
+        <div class="pure-u-1-1">
+
+            <h1>Our mission</h1>
+
+            <p>Make interesting software easy to use and easy to deploy, by providing microservices in the form of Docker containers with REST APIs.</p>
+            <!--
+            <p>Assist developers and designers in creating frontend applications
+            faster, and promote experiementation. Emphasis on creative coding and generative art.</p>
+
+            <p>Examples include test data generation, color generation and manipulation, </p> -->
+
+            <br><br>
+        </div>
+        <!--
+        <div class="pure-u-1-1">
+            <h1>Our tools</h1>
+        </div>
+
+        <div class="pure-u-1-3">
+            <p>Docker containers, installed with one command</p>
+        </div>
+
+        <div class="pure-u-1-3">
+            <p>Simple REST APIs with JSON payloads</p>
+        </div>
+
+        <div class="pure-u-1-3">
+            <p>Examples, documentation</p>
+        </div> -->
+
+        <div class="pure-u-1-2">
+            <p>
+                <%= link_to "Show me the microservices", "/microservices.html" %>
+            </p>
+        </div>
+
+        <div class="pure-u-1-2">
+            <p>
+                <%= link_to "What is a microservice ?", "/faq.html" %>
+            </p>
+        </div>
+
+    </div>
+
+</div>
