Added particle effect on the homepage, refined the menu

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,15 +13,14 @@ layout: homepage
 
             <h1>Our mission</h1>
 
-            <p>Make interesting software easy to use and easy to deploy, by providing microservices in the form of Docker containers with REST APIs.</p>
+            <p>Make useful software easy to use and easy to deploy, by providing microservices in the form of containers with REST APIs.</p>
             <!--
             <p>Assist developers and designers in creating frontend applications
             faster, and promote experiementation. Emphasis on creative coding and generative art.</p>
-
             <p>Examples include test data generation, color generation and manipulation, </p> -->
-
             <br><br>
         </div>
+        
         <!--
         <div class="pure-u-1-1">
             <h1>Our tools</h1>
