--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -36,11 +36,11 @@
                             <a href="/standard" class="pure-menu-link">The MSA Standard</a>
                         </li>
 
+                        <li class="pure-menu-item menu-item-divided "></li>
+
                         <li class="pure-menu-item">
                             <a href="/microservices" class="pure-menu-link">All the services</a>
                         </li>
-
-                        <li class="pure-menu-item menu-item-divided "></li>
 
                         <li class="pure-menu-item">
                             <a href="" class="pure-menu-item">Recently added</a>
@@ -57,12 +57,26 @@
                         <li class="pure-menu-item">
                             <a href="/microservices/ms2" class="pure-menu-link">MS2</a>
                         </li>
+                        <li class="pure-menu-item">
+                            <a href="/microservices/ms2" class="pure-menu-link">MS32</a>
+                        </li>
+                        <li class="pure-menu-item">
+                            <a href="/microservices/ms2" class="pure-menu-link">MS24</a>
+                        </li>
+                        <li class="pure-menu-item">
+                            <a href="/microservices/ms2" class="pure-menu-link">MS22</a>
+                        </li>
+                        <li class="pure-menu-item">
+                            <a href="/microservices/ms2" class="pure-menu-link">MS245</a>
+                        </li>
+                        <li class="pure-menu-item">
+                            <a href="/microservices/ms2" class="pure-menu-link">MS432</a>
+                        </li>
+                        <li class="pure-menu-item">
+                            <a href="/microservices/ms2" class="pure-menu-link">MS422</a>
+                        </li>
 
                         <li class="pure-menu-item menu-item-divided "></li>
-
-                        <li class="pure-menu-item">
-                            <a href="/faq" class="pure-menu-link">FAQ</a>
-                        </li>
 
                         <li class="pure-menu-item">
                             <a href="/contribute" class="pure-menu-link">Contribute</a>
@@ -70,6 +84,10 @@
 
                         <li class="pure-menu-item">
                             <a href="/about" class="pure-menu-link">About</a>
+                        </li>
+
+                        <li class="pure-menu-item">
+                            <a href="/faq" class="pure-menu-link">FAQ</a>
                         </li>
 
                     </ul>
@@ -89,6 +107,6 @@
             </div>
         </div>
 
-        <%= javascript_include_tag :ui %>
+        <%= javascript_include_tag :side_menu %>
     </body>
 </html>
