--- a/source/layouts/homepage.erb
+++ b/source/layouts/homepage.erb
@@ -12,7 +12,12 @@
     <%= javascript_include_tag :all %>
   </head>
 
+  <canvas id="canvas"></canvas>
+
   <body class="<%= page_classes %>">
     <%= yield %>
   </body>
+
+  <%= javascript_include_tag :particles %>
+
 </html>
