--- a/source/stylesheets/pure_side_menu.css
+++ b/source/stylesheets/pure_side_menu.css
@@ -7,11 +7,7 @@ body {
     height: auto;
 }
 
-
-/*
-Add transition to containers so they can push in and out.
-*/
-
+/* Add transition to containers so they can push in and out. */
 #layout, #menu, .menu-link {
     -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
@@ -21,10 +17,7 @@ Add transition to containers so they can push in and out.
 }
 
 
-/*
-This is the parent `<div>` that contains the menu and the content area.
-*/
-
+/* This is the parent `<div>` that contains the menu and the content area. */
 #layout {
     position: relative;
     padding-left: 0;
@@ -39,11 +32,7 @@ This is the parent `<div>` that contains the menu and the content area.
     left: 200px;
 }
 
-
-/*
-The content `<div>` is where all your content goes.
-*/
-
+/* The content `<div>` is where all your content goes. */
 .content {
     margin: 0 auto;
     padding: 0 2em;
@@ -80,13 +69,10 @@ The content `<div>` is where all your content goes.
 }
 
 
-/*
-The `#menu` `<div>` is the parent `<div>` that contains the `.pure-menu` that
-appears on the left side of the page.
-*/
-
+/* The `#menu` `<div>` is the parent `<div>` that contains the `.pure-menu`
+   that appears on the left side of the page. */
 #menu {
-    text-indent: 1em;
+    text-indent: 1.5em;
     margin-left: -200px;
     /* "#menu" width */
     width: 200px;
@@ -96,94 +82,62 @@ appears on the left side of the page.
     bottom: 0;
     z-index: 1000;
     /* so the menu or its navicon stays above all content */
-    background: #282A2E;
+    background: #242629;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
 
-
-/*
-    All anchors inside the menu should be styled like this.
-    */
-
+/* All anchors inside the menu should be styled like this. */
 #menu a {
-    color: #999;
+    color: #e2e2e2;
     border: none;
     padding: 0.6em 0 0.6em 0.6em;
 }
 
+#menu .pure-menu-item {
+  padding-bottom: 0.45em;
+}
 
-/*
-    Remove all background/borders, since we are applying them to #menu.
-    */
-
+/* Remove all background/borders, since we are applying them to #menu. */
 #menu .pure-menu, #menu .pure-menu ul {
     border: none;
     background: transparent;
 }
 
-
-/*
-    Add that light border to separate items into groups.
-    */
-
+/* Add that light border to separate items into groups. */
 #menu .pure-menu ul, #menu .pure-menu .menu-item-divided {
     border-top: 1px solid #d9d9d9;
 }
 
-
-/*
-        Change color of the anchor links on hover/focus.
-        */
-
+/* Change color of the anchor links on hover/focus. */
 #menu .pure-menu li a:hover, #menu .pure-menu li a:focus {
-    background: #333;
+    background: #0bbf4e;
 }
 
-
-/*
-    This styles the selected menu item `<li>`.
-    */
-
+/* This styles the selected menu item `<li>`. */
 #menu .pure-menu-selected, #menu .pure-menu-heading {
     background: #0bbf4e;
 }
 
-
-/*
-        This styles a link within a selected menu item `<li>`.
-        */
-
+/* This styles a link within a selected menu item `<li>`. */
 #menu .pure-menu-selected a {
-    color: #fff;
+    color: #ffffff;
 }
 
-
-/*
-    This styles the menu heading.
-    */
-
+/* This styles the menu heading. */
 #menu .pure-menu-heading {
-    font-size: 110%;
-    color: #fff;
+    font-size: 120%;
+    color: #ffffff;
     margin: 0;
 }
 
+/* -- Dynamic Button For Responsive Menu ---------------------------------*/
 
-/* -- Dynamic Button For Responsive Menu -------------------------------------*/
+/* The button to open/close the Menu is custom-made and not part of Pure.
+   Here's how it works: */
 
-
-/*
-The button to open/close the Menu is custom-made and not part of Pure. Here's
-how it works:
-*/
-
-
-/*
-`.menu-link` represents the responsive menu toggle that shows/hides on
-small screens.
-*/
-
+/* `.menu-link` represents the responsive menu toggle that shows/hides on
+small screens. */
 .menu-link {
     position: fixed;
     display: block;
@@ -227,13 +181,9 @@ small screens.
 }
 
 
-/* -- Responsive Styles (Media Queries) ------------------------------------- */
+/* -- Responsive Styles (Media Queries) ------------------------------- */
 
-
-/*
-Hides the menu at `48em`, but modify this based on your app's needs.
-*/
-
+/* Hides the menu at `48em`, but modify this based on your app's needs. */
 @media (min-width: 48em) {
     .header, .content {
         padding-left: 2em;
