Added content to the faq section, css tweaks

--- a/source/stylesheets/pure_side_menu.css
+++ b/source/stylesheets/pure_side_menu.css
@@ -188,6 +188,8 @@ small screens. */
     .header, .content {
         padding-left: 2em;
         padding-right: 2em;
+        padding-top: 1em;
+        padding-bottom: .5em;
     }
     #layout {
         padding-left: 200px;
