--- a/source/stylesheets/site.css
+++ b/source/stylesheets/site.css
@@ -24,8 +24,13 @@ h1 {
   font-family: 'Open Sans', sans-serif;
   font-size: 2em;
   font-weight: 400;
+  line-height: 1.25em;
   margin: 0;
-  padding-bottom: 0.5em;
+  padding-top: 0.75em;
+  padding-bottom: 0.15em;
+}
+
+h2 {
 }
 
 p {
@@ -37,11 +42,13 @@ p {
 }
 
 a {
+  color: #0bbf4e;
   text-decoration: none;
   transition: color 0.1s linear;
 }
 
 a:hover {
+  color: white;
   background: #0bbf4e;
   transition: all 0.15s linear;
 }
