--- a/source/stylesheets/site.css
+++ b/source/stylesheets/site.css
@@ -4,6 +4,7 @@
 @charset "utf-8";
 @import "normalize.css";
 @import "pure.min.css";
+@import "pure-grids-responsive.min.css";
 
 @import url('http://fonts.googleapis.com/css?family=Lato:300,400');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
@@ -51,4 +52,9 @@ a:hover {
   color: white;
   background: #0bbf4e;
   transition: all 0.15s linear;
+}
+
+.ms-description {
+  font-size: 1.5em;
+  margin-right: 0.85em;
 }
