Added pages for ms templates & tools

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -37,17 +37,17 @@
                         </li>
 
                         <li class="pure-menu-item">
-                            <a href="/standard" class="pure-menu-link">The MSA templates</a>
+                            <a href="/templates" class="pure-menu-link">The MSA templates</a>
                         </li>
 
                         <li class="pure-menu-item">
-                            <a href="/contribute" class="pure-menu-link">Suggested Tools</a>
+                            <a href="/tools" class="pure-menu-link">Suggested Tools</a>
                         </li>
 
                         <li class="pure-menu-item menu-item-divided "></li>
 
                         <li class="pure-menu-item">
-                            <a href="/microservices" class="pure-menu-link">All the services</a>
+                            <a href="/microservices" class="pure-menu-link">List of microservices</a>
                         </li>
 
                         <li class="pure-menu-item">
