--- a/source/stylesheets/sidemenu.css
+++ b/source/stylesheets/sidemenu.css
@@ -104,8 +104,13 @@ body {
     background: transparent;
 }
 
+
+#menu .pure-menu ul {
+    border-top: 1px solid #0bbf4e;
+}
+
 /* Add that light border to separate items into groups. */
-#menu .pure-menu ul, #menu .pure-menu .menu-item-divided {
+#menu .pure-menu .menu-item-divided {
     border-top: 1px solid #d9d9d9;
 }
 
@@ -116,7 +121,7 @@ body {
 
 /* This styles the selected menu item `<li>`. */
 #menu .pure-menu-selected, #menu .pure-menu-heading {
-    background: #0bbf4e;
+    /*background: #0bbf4e;*/
 }
 
 /* This styles a link within a selected menu item `<li>`. */
