--- a/source/stylesheets/sidemenu.css
+++ b/source/stylesheets/sidemenu.css
@@ -36,7 +36,7 @@ body {
 .content {
     margin: 0 auto;
     padding: 0 2em;
-    max-width: 900px;
+    max-width: 85%;
     margin-bottom: 50px;
     line-height: 1.6em;
 }
