--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,42 +9,18 @@ layout: homepage
 
     <div class="pure-g">
 
-        <div class="pure-u-1-1">
-
+        <div class="pure-u-1-1" id="subtext">
             <h1>Our mission</h1>
-
             <p>Make useful software easy to use and easy to deploy, by providing microservices in the form of containers with REST APIs.</p>
-            <!--
-            <p>Assist developers and designers in creating frontend applications
-            faster, and promote experiementation. Emphasis on creative coding and generative art.</p>
-            <p>Examples include test data generation, color generation and manipulation, </p> -->
-            <br><br>
-        </div>
-        
-        <!--
-        <div class="pure-u-1-1">
-            <h1>Our tools</h1>
         </div>
 
-        <div class="pure-u-1-3">
-            <p>Docker containers, installed with one command</p>
-        </div>
-
-        <div class="pure-u-1-3">
-            <p>Simple REST APIs with JSON payloads</p>
-        </div>
-
-        <div class="pure-u-1-3">
-            <p>Examples, documentation</p>
-        </div> -->
-
-        <div class="pure-u-1-2">
+        <div class="pure-u-1 pure-u-md-1-2">
             <p>
                 <%= link_to "Show me the microservices", "/microservices.html" %>
             </p>
         </div>
 
-        <div class="pure-u-1-2">
+        <div class="pure-u-1 pure-u-md-1-2">
             <p>
                 <%= link_to "What is a microservice ?", "/faq.html" %>
             </p>
