Reorganized some sections, added a favicon

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,23 +32,27 @@
                             <a href="/" class="pure-menu-link">Homepage</a>
                         </li>
 
+                        <!-- <li class="pure-menu-item">
+                            <a href="/mission" class="pure-menu-link">The Mission</a>
+                        </li> -->
+
                         <li class="pure-menu-item">
-                            <a href="/standard" class="pure-menu-link">The MSA standard</a>
+                            <a href="/standard" class="pure-menu-link">The Standard</a>
                         </li>
 
                         <li class="pure-menu-item">
-                            <a href="/templates" class="pure-menu-link">The MSA templates</a>
+                            <a href="/templates" class="pure-menu-link">The Templates</a>
                         </li>
-
+<!--
                         <li class="pure-menu-item">
                             <a href="/tools" class="pure-menu-link">Suggested Tools</a>
-                        </li>
+                        </li> -->
 
                         <li class="pure-menu-item menu-item-divided "></li>
 
-                        <li class="pure-menu-item">
+                        <!-- <li class="pure-menu-item">
                             <a href="/microservices" class="pure-menu-link">List of microservices</a>
-                        </li>
+                        </li> -->
 
                         <li class="pure-menu-item">
                             <a href="" class="pure-menu-item">Recently added</a>
