--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,28 +4,22 @@ layout: homepage
 ---
 
 <div class="content">
-
     <h1 class="header">THE MICROSERVICES AGENCY</h1>
-
     <div class="pure-g">
 
         <div class="pure-u-1-1" id="subtext">
             <h1>Our mission</h1>
-            <p>Make useful software easy to use and easy to deploy, by providing microservices in the form of containers with REST APIs.</p>
+            <p>Make software simple to use and easy to deploy,<br>
+               by providing RESTful microservices in containers.</p>
         </div>
 
         <div class="pure-u-1 pure-u-md-1-2">
-            <p>
-                <%= link_to "Show me the microservices", "/microservices.html" %>
-            </p>
+            <p><%= link_to "Show me the microservices", "/microservices.html" %></p>
         </div>
 
         <div class="pure-u-1 pure-u-md-1-2">
-            <p>
-                <%= link_to "What is a microservice ?", "/faq.html" %>
-            </p>
+            <p><%= link_to "What is a microservice ?", "/faq.html" %></p>
         </div>
 
     </div>
-
 </div>
