--- a/source/stylesheets/homepage.css
+++ b/source/stylesheets/homepage.css
@@ -1,7 +1,3 @@
-/*
- * Custom css only applied to the website homepage
- */
-
 
 body {
     text-align: center;
@@ -13,8 +9,11 @@ body {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(40, 42, 46, 0.9);
+    background-color: rgba(14, 14, 14, 0.93);
     padding: 30px;
+    border: #333333;
+    border-style: solid;
+    border-width: 1PX;
 }
 
 .header {
