--- a/source/stylesheets/site.css
+++ b/source/stylesheets/site.css
@@ -1,70 +1,60 @@
-/*
- * CSS that is applied to every page on the website
- */
 @charset "utf-8";
 @import "normalize.css";
 @import "pure.min.css";
 @import "pure-grids-responsive.min.css";
-
 @import url('http://fonts.googleapis.com/css?family=Lato:300,400');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
 
 ::selection {
-  background: #0bbf4e; /* WebKit/Blink Browsers */
+    background: #0bbf4e;
 }
+
 ::-moz-selection {
-  background: #0bbf4e; /* Gecko Browsers */
+    background: #0bbf4e;
 }
 
 body {
-  background: #282A2E;
-  color: white;
+    background: #0e0e0e;
+    color: white;
 }
 
 h1 {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 2em;
-  font-weight: 400;
-  line-height: 1.25em;
-  margin: 0;
-  padding-top: 0.75em;
-  padding-bottom: 0.15em;
-}
-
-h2 {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 2em;
+    font-weight: 400;
+    line-height: 1.25em;
+    margin: 0;
+    padding-top: 0.75em;
+    padding-bottom: 0.15em;
 }
 
 p {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.6em;
-  line-height: 1.5em;
-  font-weight: 300;
-  margin-bottom: 1em;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1.6em;
+    line-height: 1.5em;
+    font-weight: 300;
+    margin-bottom: 1em;
 }
 
 a {
-  color: #0bbf4e;
-  text-decoration: none;
-  transition: color 0.1s linear;
+    color: #0bbf4e;
+    text-decoration: none;
+    transition: color 0.1s linear;
 }
 
 a:hover {
-  color: white;
-  background: #0bbf4e;
-  transition: all 0.15s linear;
+    color: white;
+    background: #0bbf4e;
+    transition: all 0.15s linear;
 }
 
 .ms-description {
-  font-size: 1.5em;
-  margin-right: 0.85em;
+    font-size: 1.5em;
+    margin-right: 0.85em;
 }
 
-/*img {
-  width: 100%;
-}*/
-
 .list {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1.6em;
     line-height: 2em;
     font-weight: 300;
