Updated the list of initial ms, updated the contribute page

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -43,7 +43,7 @@
                         <li class="pure-menu-item menu-item-divided "></li>
 
                         <li class="pure-menu-item">
-                            <a href="" class="pure-menu-item">Recently added</a>
+                            <a href="/microservices/" class="pure-menu-item">The Microservices</a>
                         </li>
 
                         <% data.microservices.microservices.slice(0,10).each do |ms| %>
