--- a/source/templates.html.erb
+++ b/source/templates.html.erb
@@ -8,7 +8,7 @@ title: Templates to build microservices
 
         <h2>Microservices Templates</h2>
 
-        <p>Here's the list of the current microservices templates. Each one links to a github repo,
+        <p>Here's the list of the current microservices templates. Each one links to a Github repo,
            that you can clone and modify to create a new microservice.</p>
     </div>
 
@@ -34,8 +34,8 @@ title: Templates to build microservices
             <li>Change the LICENSE file for your favorite
                 <a href="https://opensource.org/licenses">open-source license</a>.</li>
 
-            <li>Write some code exposing functionnaly over a RESTful API. This is a the hard part.
-               You can find in the FAQ section a list of best practices and various ressources.
+            <li>Write some code exposing functionality over a RESTful API. This is the hard part.
+               You can find in the FAQ section a list of best practices and various resources.
             </li>
 
             <li>Update the swagger.json file to describe your API. The
@@ -49,7 +49,7 @@ title: Templates to build microservices
             <li>Share your work ! Publish the code on Github and the image to the Docker Hub.</li>
 
             <li>As you change your microservice over time, update the VERSION file with a new version number, follow
-                <a href="http://semver.org/">the semantic versionning specification</a>.</li>
+                <a href="http://semver.org/">the semantic versioning specification</a>.</li>
 
         </ul>
 
@@ -61,7 +61,7 @@ title: Templates to build microservices
            They follow a simple msa-image-&lt;language&gt; naming convention.</p>
 
         <p>Images share a few components, Alpine Linux as the container operating system,
-           Nginx as an embeded web server and caching layer, Swagger for the API documentation.</p>
+           Nginx as an embedded web server and caching layer, Swagger for the API documentation.</p>
     </div>
 
     <div class="pure-u-1">
