--- a/source/microservices.html.erb
+++ b/source/microservices.html.erb
@@ -4,10 +4,10 @@ title: The Microservices
 
 <div class="pure-g">
 
-  <% data.microservices.microservices.each do |f| %>
+  <% data.microservices.microservices.each do |ms| %>
       <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
-          <h1><a href="/microservices/<%= f.name %>"><%= f.name %></a></h1>
-            <p class="ms-description"><%= f.description %></p>
+          <h1><a href="<%= ms.url %>"><%= ms.name %></a></h1>
+            <p class="ms-description"><%= ms.description %></p>
       </div>
   <% end %>
 
