--- a/source/stylesheets/site.css
+++ b/source/stylesheets/site.css
@@ -2,7 +2,7 @@
 @import "normalize.css";
 @import "pure.min.css";
 @import "pure-grids-responsive.min.css";
-@import url('http://fonts.googleapis.com/css?family=Lato:300,400');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
 
 ::selection {
