Fixed the images links

--- a/source/templates.html.erb
+++ b/source/templates.html.erb
@@ -66,12 +66,12 @@ title: Templates to build microservices
 
     <div class="pure-u-1">
         <p>Example of a reusable container image and some of it's layers :</p>
-        <img class="pure-img" src="images/msa-image.png" alt="This is a "></img>
+        <%= image_tag 'msa-image.png', :class => 'pure-img' %>
     </div>
 
     <div class="pure-u-1">
         <p>An example microservice built with the previous image :</p>
-        <img class="pure-img" src="images/msa-template.png"></img>
+        <%= image_tag 'msa-template.png', :class => 'pure-img' %>        
     </div>
 
     <div class="pure-u-1">
