Added GA script

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,7 +8,7 @@
         <title><%= current_page.data.title || "MSA" %></title>
 
         <%= stylesheet_link_tag :sidemenu %>
-        <%= stylesheet_link_tag :site %>        
+        <%= stylesheet_link_tag :site %>
     </head>
 
     <body class="<%= page_classes %>">
@@ -78,5 +78,6 @@
         </div>
 
         <%= javascript_include_tag :side_menu %>
+        <%= javascript_include_tag :analytics %>
     </body>
 </html>
