--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,8 +4,9 @@
         <meta content="IE=edge" http-equiv="X-UA-Compatible">
         <meta charset="utf-8">
         <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+        <meta name="description" content="Providing open source RESTful microservices in containers.">
 
-        <title><%= current_page.data.title || "MSA" %></title>
+        <title><%= current_page.data.title || "The Microservices Agency" %></title>
 
         <%= stylesheet_link_tag :sidemenu %>
         <%= stylesheet_link_tag :site %>
