New side menu layout, css adjustments

--- a/source/stylesheets/homepage.css
+++ b/source/stylesheets/homepage.css
@@ -21,6 +21,7 @@ body {
     font-size: 3.25em;
     margin-bottom: 0.65em;
     border-bottom: 1px solid #0bbf4e;
+    text-align: center;
 }
 
 h1 {
