--- a/source/stylesheets/sidemenu.css
+++ b/source/stylesheets/sidemenu.css
@@ -40,7 +40,7 @@ body {
     line-height: 1.6em;
 }
 
-.header {
+#menu .header {
     color: white;
     margin: 0;
     text-align: center;
@@ -48,13 +48,13 @@ body {
     /*border-bottom: 1px solid #eee;*/
 }
 
-.header h1 {
+#menu .header h1 {
     margin: 0.2em 0;
     font-size: 3em;
     font-weight: 300;
 }
 
-.header h2 {
+#menu .header h2 {
     font-weight: 300;
     color: #ccc;
     padding: 0;
@@ -88,13 +88,14 @@ body {
     border-right: #424242;
     border-right-style: solid;
     border-right-width: 1px;
+    padding-top: 4em;
 }
 
 /* All anchors inside the menu should be styled like this. */
 #menu a {
-    color: #e2e2e2;
+    color: #999999;
     border: none;
-    padding: 0.6em 0 0.6em 0.6em;
+    padding: 0.6em 1em 0.6em 0.6em;
 }
 
 #menu .pure-menu-item {
@@ -103,6 +104,7 @@ body {
 
 /* Remove all background/borders, since we are applying them to #menu. */
 #menu .pure-menu, #menu .pure-menu ul {
+    text-align: right;
     border: none;
     background: transparent;
 }
@@ -119,6 +121,7 @@ body {
 
 /* Change color of the anchor links on hover/focus. */
 #menu .pure-menu li a:hover, #menu .pure-menu li a:focus {
+    color: white;
     background: #0bbf4e;
 }
 
