--- a/source/microservices.html.erb
+++ b/source/microservices.html.erb
@@ -5,9 +5,17 @@ title: The Microservices
 <div class="pure-g">
 
   <% data.microservices.microservices.each do |ms| %>
-      <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
+      <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3" style="padding-top: 1em;">
           <h2><a href="<%= ms.url %>"><%= ms.name %></a></h2>
             <p class="ms-description"><%= ms.description %></p>
+            <div class="badges" style="margin-top: -10px;opacity: 0.60;">
+              <a href="https://hub.docker.com/r/msagency/<%= ms.name %>">
+                <img src="https://img.shields.io/badge/version-<%= ms.version %>-blue.svg?style=flat-square&colorB=0e0e0e">
+              </a>
+              <a href="https://travis-ci.org/TheMicroservicesAgency/<%= ms.name %>">
+                <img src="https://img.shields.io/travis/TheMicroservicesAgency/<%= ms.name %>.svg?branch=master&style=flat-square">
+              </a>
+            </div>
       </div>
   <% end %>
 
